--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    color: #2d3335;
+    font-family: "Varela Round";
+    text-align: center;
+    background: #edeff1;
+    font-size: 16px; 
+}
