--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -3,11 +3,12 @@
 </ul> -->
 <agm-map [latitude]="mapLat" [longitude]="mapLng" [zoom]="14">  
     <div *ngFor="let location of locations" >
-      <agm-marker [latitude]="location.lat" [longitude]="location.lng" [openInfoWindow]="true">
+      <agm-marker [latitude]="location.lat" [longitude]="location.lng" [openInfoWindow]="true" [iconUrl]="getIconUrl(location.open)">
         <agm-info-window>
           <div>
             <h3>{{location.name}}</h3>
-            Is Open: {{location.open}}
+            <p *ngIf="location.open">We are open</p>
+            <p [hidden]="location.open">Sorry this place is closed!</p>
           </div>
         </agm-info-window>
       </agm-marker>
