--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -1,7 +1,7 @@
  <!--The content below is only a placeholder and can be replaced.-->
  <div style="text-align:center">
     <h1>
-      Houston top 5 places!
+      Houston top 5 places
     </h1>
     <app-map></app-map>
   </div>
